# KhaneTalaTestForJob

./: README.md  hello.py  pyproject.toml  requirements.txt
core/core/: urls.py
core/core/settings/: base_settings.py  dev.py
core/trade/: admin.py  apis.py  models.py  serializers.py  tests.py  urls.py
core/trade/scripts/: create_dummy_data.py
